--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,27 @@ services:
       - POSTGRES_PASSWORD=root
 
   ewm-service:
+    build: ewm-service
+    image: ewm-service-image
+    container_name: ewm-service
     ports:
       - "8080:8080"
+    depends_on:
+      - ewm-db
+    environment:
+      #- SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/hit
+      - DB_NAME=ewm
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+      - DB_HOST=ewm-db
+      - DB_PORT=5432
 
   ewm-db:
     image: postgres:14-alpine
+    container_name: ewm-db
+    ports:
+      - "6542:5432"
+    environment:
+      - POSTGRES_DB=ewm
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
