--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 server.port=8080
 
-#spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
+spring.datasource.username=root
+spring.datasource.password=root
 
 
 
