feat: реализация сервиса статистики

--- a/ewm-service/pom.xml
+++ b/ewm-service/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>ewm-service</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
