--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,9 @@ services:
     depends_on:
       - stats-db
     environment:
-      #- SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/hit
-      - DB_NAME=statistic
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
-      - DB_HOST=stats-db
-      - DB_PORT=5432
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/statistic
+      - SPRING_DATASOURCE_USER=root
+      - SPRING_DATASOURCE_PASSWORD=root
 
   stats-db:
     image: postgres:14-alpine
@@ -33,14 +30,12 @@ services:
     ports:
       - "8080:8080"
     depends_on:
+      - stats-server
       - ewm-db
     environment:
-      #- SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/hit
-      - DB_NAME=ewm
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
-      - DB_HOST=ewm-db
-      - DB_PORT=5432
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm
+      - SPRING_DATASOURCE_USER=root
+      - SPRING_DATASOURCE_PASSWORD=root
 
   ewm-db:
     image: postgres:14-alpine
