--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -5,7 +5,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialec
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
+spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql:ewm-db
 spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
+
 spring.datasource.username=root
 spring.datasource.password=root
 
