--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -5,12 +5,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialec
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
-spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql:ewm-db
-spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
+#spring.datasource.username=root
+#spring.datasource.password=root
 
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.username=test
+spring.datasource.password=test
 
 
 
