--- a/ewm-service/pom.xml
+++ b/ewm-service/pom.xml
@@ -19,13 +19,13 @@
     </properties>
 
     <dependencies>
-<!--
-        <dependency>
+
+       <dependency>
             <groupId>ru.practicum</groupId>
             <artifactId>stat-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -64,6 +64,13 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.15.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
