--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -10,8 +10,12 @@ spring.sql.init.mode=always
 #spring.datasource.username=root
 #spring.datasource.password=root
 
+spring.h2.console.enabled=true
+stats-server.url=http://localhost:9090
+app-name=ewm-service
+
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.url=jdbc:h2:mem:ewm
 spring.datasource.username=test
 spring.datasource.password=test
 
