--- a/stats-server/stat-service/src/main/resources/application.properties
+++ b/stats-server/stat-service/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.sql.init.mode=always
 #spring.datasource.password=root
 
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.url=jdbc:h2:mem:stat-db
 spring.datasource.username=test
 spring.datasource.password=test
