--- a/stats-server/stat-client/pom.xml
+++ b/stats-server/stat-client/pom.xml
@@ -22,7 +22,7 @@
             <groupId>ru.practicum</groupId>
             <artifactId>stat-dto</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-            <!--<scope>compile</scope> значение по умолчанию?-->
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
