--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -1,23 +1,24 @@
 server.port=8080
+app-name=ewm-service
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
+spring.datasource.username=root
+spring.datasource.password=root
 
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 stats-server.url=http://localhost:9090
-app-name=ewm-service
 
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:ewm
-spring.datasource.username=test
-spring.datasource.password=test
+
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:ewm
+#spring.datasource.username=test
+#spring.datasource.password=test
 
 
 
