--- a/stats-server/stat-service/src/main/resources/application.properties
+++ b/stats-server/stat-service/src/main/resources/application.properties
@@ -6,10 +6,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
 #spring.datasource.url=jdbc:postgresql://stats-db:6541/statistic
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://localhost:6541/statistic
+spring.datasource.username=root
+spring.datasource.password=root
 
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:stat-db
-spring.datasource.username=test
-spring.datasource.password=test
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:stat-db
+#spring.datasource.username=test
+#spring.datasource.password=test
