feat: add categories, events, requests, compilations

--- a/stats-server/stat-service/src/main/resources/application.properties
+++ b/stats-server/stat-service/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialec
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
-#spring.datasource.url=jdbc:postgresql://stats-db:6541/statistic
-spring.datasource.url=jdbc:postgresql://localhost:6541/statistic
+spring.datasource.url=jdbc:postgresql://stats-db:6541/statistic
+#spring.datasource.url=jdbc:postgresql://localhost:6541/statistic
 spring.datasource.username=root
 spring.datasource.password=root
 
