--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 #spring.h2.console.enabled=true
-stats-server.url=http://localhost:9090
+#stats-server.url=http://localhost:9090
 
 
 #spring.datasource.driverClassName=org.h2.Driver
