feat: add categories, events, requests, compilations

--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.password=root
 
 #spring.h2.console.enabled=true
 #stats-server.url=http://localhost:9090
+stats-server.url=stats-server:9090
 
 
 #spring.datasource.driverClassName=org.h2.Driver
